fix(forms): add no wrap for compact

--- a/projects/angular/forms/styles/_containers.clarity.scss
+++ b/projects/angular/forms/styles/_containers.clarity.scss
@@ -183,6 +183,7 @@
     .clr-subtext-container {
       flex-basis: auto;
       margin-top: 0;
+      flex-wrap: nowrap;
     }
 
     .clr-control-container {
